@@ -7,6 +7,7 @@
 - added `$.promisify(fn, [a], [b])` method
 - added `FILESTORAGE().copy(id, path, [callback(err, meta)])`
 - fixed formatting `0` number in the `Tangular.format` helper
+- improved `$.invalid()` method, now it returns `ErrorBuilder`
 
 ========================
 0.0.3
